apps/rabbitmq/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
    labels:
        run: rabbitmq
spec:
    ports:
        - port: 80
          targetPort: 80
    selector:
        run: adomate
