apps/rabbitmq/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rabbitmq-ingress
    namespace: rabbitmq
    annotations:
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        kubernetes.io/ingress.class: "nginx"
spec:
    tls:
        - hosts:
              - rabbitmq.adomate.ai
          secretName: frontend-tls
    rules:
        - host: rabbitmq.adomate.ai
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: rabbitmq-management
                            port:
                                number: 15672
